Opened 10 years ago

Closed 10 years ago

#11855 closed bug (fixed)

LoggingConsumer crashes media_addon_server

Reported by: codewrangler Owned by: waddlesplash
Priority: normal Milestone: R1
Component: Applications/Cortex Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I am using nightly build hrev48800 and have OpenSound installed.

Steps to reproduce:

  1. Update Haiku OS to hrev48800 with OpenSound driver
  2. Reboot Haiku OS
  3. Notice that 'media_addon_server' crashes
  4. Notice that there is no longer sound (no mixers)

Attachments (2)

mas_crash.png (25.9 KB ) - added by codewrangler 10 years ago.
Screenshot of Crash Dialog
media_addon_server-703-debug-13-02-2015-18-48-23.report (11.8 KB ) - added by codewrangler 10 years ago.
Crash log file

Download all attachments as: .zip

Change History (4)

by codewrangler, 10 years ago

Attachment: mas_crash.png added

Screenshot of Crash Dialog

by codewrangler, 10 years ago

Crash log file

comment:1 by waddlesplash, 10 years ago

Component: - GeneralApplications/Cortex
Owner: changed from nobody to waddlesplash
Status: newassigned
Summary: media_addon_server crashes on startupLoggingConsumer crashes media_addon_server

Oops. Looks like there's something wrong with LoggingConsumer. Investigating...

comment:2 by waddlesplash, 10 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev48801.

Note: See TracTickets for help on using tickets.