Cortex: LoggingConsumer addon: fix crash on startup.

Fixes #11855.